# TerraSense

./: README.md
resnet18_terraset/files/: run_all_2.sh
resnet18_terraset/files/code/: inspect_resnet18_terraset6.py  resnet18_terraset6_train_and_quantize.py  terraset6_generate_images.py  train1_resnet18_terraset6.py  train2_resnet18_terraset6.py  vai_q_resnet18_terraset6.py
resnet18_terraset/files/code/config/: terraset6_config.py
rosML_contest/: package.xml  setup.cfg  setup.py
rosML_contest/rosML_contest/: ml_publisher.py  terrain_costmap_layer.py
src/: TerraSenseGraph.drawio
src/terra_sense/: CMakeLists.txt  package.xml  setup.cfg  setup.py  terrain_costmap_layers.xml  terrain_layer.xml
src/terra_sense/config/: ekf.yaml  nav2_params copy.yaml  nav2_params.yaml  nav2_params_noclass.yaml  nav2_sim.yaml  rviz_nav2.rviz  rviz_rtabmap.rviz
src/terra_sense/include/terra-sense/: terrain_layer.hpp
src/terra_sense/include/terra_sense/: terrain_layer.hpp
src/terra_sense/launch/: terrasense_demo._launch.py  terrasense_demo.launch.py  terrasense_kria.launch.py  terrasense_turtle.launch.py
src/terra_sense/scripts/: speed_adjust.py  terrain_publisher.py  terrain_publisher_cpu.py
src/terra_sense/src/: terrain_layer.cpp
src/terra_sense/terra_sense/: ml_publisher.py  terrain_costmap.py
